refactoring, min 6.0, sdk 29